# master_app

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
admin/: setup.py  views.py
api/: auth.py  bookings.py  master.py  public.py  schedule.py  services.py
bot/: bot.py
core/: config.py  database.py  dependencies.py  logging.py  security.py
frontend/: book.html  cancel.html  master.html  reset.html
migrations/: env.py
migrations/versions/: 0ab2b527b8c0_add_password_reset_tokens.py  5eceeec25e00_add_notes_to_booking.py  626d83636cff_add_schedule_exceptions.py  71813428accd_add_timezone_to_master.py  74a67a414265_rename_is_active_to_is_working_in_work_.py  8771eca30865_add_notify_email_to_masters.py  d834703513ed_add_client_social_make_client_phone_.py  fb0a28f50790_init.py  fb19c4fed6ca_add_telegram_id_to_masters.py
models/: __init__.py  booking.py  password_reset.py  schedule.py  schedule_exception.py  service.py  subscription.py  user.py
nginx/: nginx.conf
schemas/: auth.py  booking.py  master.py  public.py  schedule.py  schedule_exception.py  service.py
tests/: conftest.py  test_auth.py  test_bookings.py  test_slots.py
utils/: email.py  telegram.py  validators.py
