[project]
name = "masterapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "celery>=5.6.2",
    "fastapi>=0.129.0",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "phonenumbers>=9.0.24",
    "pydantic-settings>=2.13.0",
    "python-jose>=3.5.0",
    "python-slugify>=8.0.4",
    "redis>=7.2.0",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
